test/library/standard/Map/testThisParSafe.good
testThisParSafe.chpl:5: In function 'test':
testThisParSafe.chpl:9: error: cannot index into a map initialized with `parSafe=true`
